# labcore

./: .buildinfo  .gitignore  404.html  AGENTS.md  CLAUDE.md  LICENSE  README.md  Untitled.ipynb  about.html  autoplotConfig.yml  bash.exe.stackdump  environment-docs.yml  environment.yml  genindex.html  index.html  mkdocs.yml  objects.inv  protocol_corrections_architecture.md  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  sitemap.xml  test.html
.github/.workflows/: ci.yml
.github/workflows/: ci.yml  code_quality.yml  sphinx.yml
_modules/: index.html  triton.html
_modules/labcore/: setup_measurements.html  setup_opx_measurements.html
_modules/labcore/analysis/: analysis_base.html  fit.html  hv_pretty.html  hvapps.html  hvplotting.html  mpl.html
_modules/labcore/data/: datadict.html  datadict_storage.html  datagen.html  tools.html
_modules/labcore/measurement/: record.html  storage.html  sweep.html
_modules/labcore/testing/: dispersive_qubit_readout_data.html  resonator_readout_data.html
_modules/labcore/utils/: misc.html  num.html
_sources/: about.md.txt  index.md.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/labcore/: index.rst.txt
_sources/autoapi/triton/: index.rst.txt
_sources/data/: index.md.txt
_sources/examples/: Data explorer.ipynb.txt  Intro to our Holoviz apps.ipynb.txt  index.md.txt
_sources/first_steps/: first_analysis.md.txt  index.md.txt  installation.md.txt
_sources/instruments/: index.md.txt  instrumentserver.md.txt
_sources/measurement/: index.md.txt
_sources/user_guide/: index.md.txt
_sources/user_guide/data/: analysis_example.md.txt
about/: index.html
api/: index.html
autoapi/: index.html
autoapi/labcore/: index.html
autoapi/labcore/analysis/: index.html
autoapi/labcore/data/: index.html
autoapi/labcore/instruments/: index.html
autoapi/labcore/measurement/: index.html
autoapi/labcore/setup_measurements/: index.html
autoapi/labcore/setup_opx_measurements/: index.html
autoapi/labcore/testing/: index.html
autoapi/labcore/utils/: index.html
autoapi/triton/: index.html
data/: analysis_example.html  data_formats.html  index.html
data/data_formats/: index.html
doc/drafts/: integrated_qick_prototype.ipynb
doc/examples/: Analyzing fake qubit data.ipynb  Holoviz-based plotting in the lab (Primer).ipynb  Holoviz-based plotting in the lab - Primer.ipynb  Intro to our Holoviz apps.ipynb  Introduction to sweeping.ipynb  Untitled.ipynb
docs/: Makefile  about.md  conf.py  index.md
docs/api/: index.md
docs/data/: data_formats.md  index.md
docs/examples/: Data explorer.ipynb  Holoviz-based plotting in the lab - Primer.ipynb  example.gitignore  hvplot_visualization_guide.ipynb
docs/first_steps/: 15_min_guide.ipynb  first_data.md  index.md
docs/instruments/: fridgedashboard.md  instrumentmonitoring.md  instrumentserver.md
docs/instruments/qcodes_instruments/: instruments.md
docs/measurement/: sweep.md
docs/overrides/: home.html
docs/user_guide/data/: data_formats.md
docs/user_guide/instruments/: instrumentmonitoring.md
docs/user_guide/measurement/: sweep.md
examples/: Data explorer.html  Data explorer.ipynb  Holoviz-based plotting in the lab - Primer.html  Intro to our Holoviz apps.html  Introduction to sweeping.html  hvplot_visualization_guide.html  hvplot_visualization_guide.ipynb  index.html
examples/Data explorer/: index.html
examples/Holoviz-based plotting in the lab - Primer/: index.html
examples/Intro to our Holoviz apps/: index.html
examples/Introduction to sweeping/: index.html
examples/data/2023-11-16T073053_5d6e89ca-qA_power_rabi/: instruments.json
examples/data/2023-11-16T073144_7bd68e94-qA_ssb_spec_pi/: data.ddh5  instruments.json  sweep_action_kwargs.json
examples/data/2023-11-16T073542_09cf8c50-qA_T1/: data.ddh5
examples/data/2023-11-16T073654_3481c8e6-qA_T2-1_Echo_0.10MHz_detuned/: instruments.json  sweep_action_kwargs.json
examples/hvplot_visualization_guide/: index.html
first_steps/: 15_min_guide.html  first_analysis.html  first_data.html  index.html  installation.html
instruments/: index.html  instrumentmonitoring.html  instrumentserver.html
instruments/instrumentmonitoring/: index.html
instruments/instrumentserver/: index.html
instruments/qcodes_instruments/: instruments.html
instruments/qcodes_instruments/instruments/: index.html
labcore/: setup_measurements.py  setup_opx_measurements.py
labcore/analysis/: __init__.py  analysis_base.py  fit.py  hv_pretty.py  hvapps.py  hvplotting.py  mpl.py
labcore/analysis/fitfuncs/: generic.py
labcore/analysis/plotting/: holo.py
labcore/data/: datadict.py  datadict_storage.py  datagen.py  ddh5.py  synthesizer.py  tools.py
labcore/instruments/opx/: config.py  mixer.py  sweep.py
labcore/instruments/qick/: config.py  qick_sweep.py  qick_sweep_v2.py  startNameserver.sh
labcore/measurement/: storage.py  sweep.py
labcore/utils/: misc.py
labstack/analysis/plotting/: holo.py
labstack/data/: datadict.py
labstack/testing/: dispersive_qubit_readout_data.py
measurement/: index.html  sweep.html
measurement/sweep/: index.html
scripts/: monitr-server.py  monitr_server.py  pyro_nameserver.py  reconstruct_safe_write_data.py  run_plot.py
search/: search_index.json
src/labcore/: setup_measurements.py
src/labcore/analysis/: __init__.py  analysis_base.py  fit.py  hv_pretty.py  hvapps.py  hvplotting.py  mpl.py
src/labcore/data/: datadict.py  datadict_storage.py  datagen.py  tools.py
src/labcore/measurement/: __init__.py  record.py  storage.py  sweep.py
src/labcore/protocols/: __init__.py  base.py
test/pytest/: conftest.py  test_analysis_base.py  test_datadict.py  test_datadict_storage.py  test_protocols.py  test_protocols_realistic.py  test_record.py  test_step_writer.py  test_sweep.py
user_guide/: index.html
user_guide/data/: analysis_example.html  data_formats.html  index.html
user_guide/instruments/: index.html  instrumentmonitoring.html  instrumentserver.html
user_guide/measurement/: index.html  sweep.html
(+140 files in other folders)
