[build-system]
requires = [
    "setuptools >= 48",
    "wheel >= 0.29.0",
    "versioningit >= 1.1.0"
]
build-backend = 'setuptools.build_meta'

[tool.mypy]
strict_optional = true
show_column_numbers = true
warn_unused_ignores = true
warn_unused_configs = true
warn_redundant_casts = true
no_implicit_optional = true
disallow_untyped_defs = true
plugins = "numpy.typing.mypy_plugin"
show_error_codes = true
enable_error_code = "ignore-without-code"

[[tool.mypy.overrides]]
module = [
    "h5py",
    "lmfit",
    "matplotlib.*",
    "pyqtgraph.*",
    "xhistogram.*",
    "ruamel.*",
    "param.*",
    "holoviews.*",
    "hvplot.*",
    "bokeh.*",
    "setuptools.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["test"]
log_cli = true

[project]
name = "labcore"
version = "0.0.0"
description = "toolkit for acquiring, processing, and analyzing data in a CM/QI physics lab."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "jupyterlab",
    "jupyter_bokeh",
    "qcodes",
    "bokeh",
    "pandas",
    "xarray",
    "matplotlib",
    "numpy",
    "scipy",
    "scikit-learn",
    "seaborn",
    "lmfit",
    "h5py",
    "xhistogram",
    "holoviews",
    "panel",
    "param",
    "hvplot",
    "versioningit",
    "qtpy",
    "gitpython",
    "watchdog",
    "pywavelets",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "pydata-sphinx-theme",
    "myst-parser",
    "myst-nb",
    "pandoc",
    "ipykernel",
    "linkify-it-py",
    "h5py",
]

[project.scripts]
autoplot = "scripts.monitr_server:run_autoplot"
pyro-ns = "scripts.pyro_nameserver:run_pyro_nameserver"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["labcore*"]
exclude = ["site*", "docs*", "scripts*", "test*"]

[tool.setuptools.package-data]
labcore = ["py.typed"]
