[project]
name = "labcore"
version = "1.0.0"
description = "toolkit for acquiring, processing, and analyzing data in a CM/QI physics lab."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Wolfgang Pfaff", email = "wolfgangpfff@gmail.com"},
    {name = "Marcos Frenkel", email = "marcosf2@illinois.edu"},
]
dependencies = [
    "jupyterlab",
    "jupyter_bokeh",
    "qcodes",
    "bokeh",
    "pandas",
    "xarray",
    "matplotlib",
    "numpy",
    "seaborn",
    "lmfit",
    "h5py",
    "holoviews",
    "panel",
    "param",
    "hvplot",
    "gitpython",
    "watchdog",
    "Pillow",
    "nest_asyncio",
    "ruamel.yaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]
docs = [
    "sphinx",
    "pydata-sphinx-theme",
    "myst-parser",
    "myst-nb",
    "pandoc",
    "ipykernel",
    "linkify-it-py",
    "h5py",
]

[project.scripts]
autoplot = "labcore.scripts.monitr_server:run_autoplot"
reconstruct-data = "labcore.scripts.reconstruct_safe_write_data:main"


[build-system]
requires = [
    "setuptools >= 48",
    "wheel >= 0.29.0",
    "versioningit >= 1.1.0"
]
build-backend = 'setuptools.build_meta'

[tool.ruff]
exclude = ["docs"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
files = ["src"]
strict_optional = true
show_column_numbers = true
warn_unused_ignores = true
warn_unused_configs = true
warn_redundant_casts = true
no_implicit_optional = true
disallow_untyped_defs = true
show_error_codes = true
enable_error_code = "ignore-without-code"

[[tool.mypy.overrides]]
module = [
    "h5py",
    "lmfit",
    "matplotlib.*",
    "pyqtgraph.*",
    "ruamel.*",
    "param.*",
    "holoviews.*",
    "hvplot.*",
    "bokeh.*",
    "setuptools.*",
    "pandas",
    "pandas.*",
    "seaborn",
    "seaborn.*",
    "nest_asyncio",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["test"]
log_cli = true

[tool.coverage.run]
branch = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
include = ["labcore*"]
exclude = ["site*", "docs*", "test*"]

[tool.setuptools.package-data]
labcore = ["py.typed"]
