[metadata]
name = labcore
description = toolkit for acquiring, processing, and analyzing data in a CM/QI physics lab.
long_description = file: README.md
long_description_content_type = text/markdown
author = Wolfgang Pfaff
author_email = wolfgangpfff@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
license = MIT
url = https://github.com/toolsforexperiments/labcore
project_urls =
    Source = https://github.com/toolsforexperiments/labcore
    Tracker = https://github.com/toolsforexperiments/labcore

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pandas>=0.22
    xarray>=0.10.0
    scipy>=1.0
    panel>=0.11.3
    param>=1.10.1
    holoviews>=1.14.1
    hvplot>=0.7.2
    scikit-learn>=0.20.0
    bokeh>=2.0.0
    pyqtgraph>=0.12.1
    matplotlib>=3.0.0
    numpy>=1.12.0
    lmfit>=1.0
    h5py>=2.10.0
    typing-extensions>=3.7.4.3
    packaging>=20.0
    xhistogram>=0.3.0
    versioningit>=1.1.0
    qcodes>=0.29.0

[options.package_data]
labcore =
    py.typed
